fixed hero image spacing

--- a/src/components/ContactHero.css
+++ b/src/components/ContactHero.css
@@ -20,8 +20,8 @@ img.fluid {
     color: white;
 }
 
-.hero-container {
-    padding-top: 10em;
+.contact-hero-container {
+    padding: 2em;
 }
 
 .hero-video {
