--- a/src/components/ServicesHero.css
+++ b/src/components/ServicesHero.css
@@ -20,8 +20,8 @@ img.fluid {
     color: white;
 }
 
-.hero-container {
-    padding-top: 10em;
+.services-hero-container {
+    padding-top: 2em;
 }
 
 .hero-video {
